[tool.poetry]
name = "map-point-to-polygon"
version = "0.1.0"
description = ""
authors = ["copyNdpaste <samnaka@naver.com>"]
readme = "README.md"
packages = [{include = "map_point_to_polygon"}]

[tool.poetry.dependencies]
python = "3.10.14"
click = "^8.1.7"
pandas = "^2.2.2"
geopandas = "^0.14.3"
flask = "^3.0.3"
pyogrio = "^0.7.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
